--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: hunyuan-ocr
-    runtime: nvidia
     deploy:
       resources:
         reservations:
@@ -18,6 +17,7 @@ services:
       - huggingface-cache:/root/.cache/huggingface
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
       - HF_HOME=/root/.cache/huggingface
       # Uncomment and set your token if needed for gated models
       # - HF_TOKEN=your_huggingface_token_here
