--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,12 @@ services:
       vllm serve tencent/HunyuanOCR
         --no-enable-prefix-caching
         --mm-processor-cache-gb 0
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 120
+      start_period: 300s
     restart: unless-stopped
 
   frontend:
@@ -37,7 +43,8 @@ services:
     environment:
       - OCR_SERVER_URL=http://hunyuan-ocr:8000
     depends_on:
-      - hunyuan-ocr
+      hunyuan-ocr:
+        condition: service_healthy
     restart: unless-stopped
 
 volumes:
